Minor notebook changes

--- a/notebook/actions/add_n_sites.ipynb
+++ b/notebook/actions/add_n_sites.ipynb
@@ -19,14 +19,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "icsd\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "mpds\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "cod\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
+      "10000\n",
       "10000\n",
       "10000\n",
       "10000\n",
