--- a/notebook/test/rest_test.ipynb
+++ b/notebook/test/rest_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "with MPRester('0WqdPfXxloze6T9N') as mpr:\n",
     "    structures = OrderedDict([(name, mpr.get_structure_by_material_id(id)) for name, id in material_ids.iteritems()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soap_payload = {\n",
+    "    'nocenters': None, 'chem_channels': False,\n",
+    "    'centerweight': 1.0, 'gaussian_width': 0.5,\n",
+    "    'cutoff': 3.5, 'cutoff_transition_width': 0.5,\n",
+    "    'nmax': 8, 'lmax': 6,\n",
+    "    'spkitMax': None, 'chemicalProjection': None,\n",
+    "    'is_fast_average': False\n",
+    "}\n",
+    "matminer_payload = {\n",
+    "    'structures': structures.values(),\n",
+    "    'preset': 'cn',\n",
+    "    'crystal_site_args': {},\n",
+    "    'site_stats_args': {}\n",
+    "}\n",
+    "pymatgen_payload = {\n",
+    "    'structures': structures.values(),\n",
+    "    'comparator': 'OccupancyComparator',\n",
+    "    'anonymous': True,\n",
+    "}\n",
+    "stidy_payload = {\n",
+    "    'structures': structures.values(),\n",
+    "    'symprec': 1e-2,\n",
+    "    'angle_tolerance': 5.\n",
+    "}"
    ]
   },
   {
