--- a/notebook/test/zoap_test_db.ipynb
+++ b/notebook/test/zoap_test_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "import cStringIO\n",
     "import gzip\n",
     "import zoap\n",
+    "import quippy_utils\n",
     "import pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +85,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a8e77bfe3094063a7e10614d940ed8e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description=u'SOAP vectors'), HTML(value=u'')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "100\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "Done",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-8448676136e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minserted_ids\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0;31m# del source_docs, quippies, soaps, soap_docs, result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Done'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m         \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: Done"
+     ]
+    }
+   ],
    "source": [
     "chunk_size = 100\n",
     "colls = {'icsd': icsd_coll, 'mpds': mpds_coll, 'cod': cod_coll}\n",
@@ -112,8 +147,7 @@
     "        quippies = quippies[np.where(quippies != None)]\n",
     "        # write quippy atoms to strings using extended xyz format\n",
     "        quippy_strs = [quippy_writer.write(quippy) for quippy in quippies]\n",
-    "        # calculate soaps\n",
-    "        calculate soaps ([OrderedDict[(str, np.ndarray([float]))]])\n",
+    "        # calculate soaps ([OrderedDict[(str, np.ndarray([float]))]])\n",
     "        soaps = get_Soaps(quippies, nprocess=N_CPUS, dispbar=False, **soap_args)\n",
     "        # prepare soaps for serialization\n",
     "        soaps = [{key: value.tolist() for key, value in soap.iteritems()} for soap in soaps]\n",
@@ -133,7 +167,7 @@
     "#                          zip(soaps, source_docs)]  # create soap docs\n",
     "        result = soap_coll.insert_many(soap_docs)\n",
     "        print(len(result.inserted_ids))\n",
-    "        del source_docs, quippies, soaps, soap_docs, result\n",
+    "        # del source_docs, quippies, soaps, soap_docs, result\n",
     "        raise Exception('Done')\n",
     "        pool.join()\n",
     "        pool.close()\n",
