--- a/notebook/test/zoap_test_matrpoj.ipynb
+++ b/notebook/test/zoap_test_matrpoj.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/azadoks/miniconda3/envs/python2/lib/python2.7/site-packages/pymatgen/__init__.py:87: UserWarning: \n",
+      "Pymatgen will drop Py2k support from v2019.1.1. Pls consult the documentation\n",
+      "at https://www.pymatgen.org for more details.\n",
+      "  at https://www.pymatgen.org for more details.\"\"\")\n"
+     ]
+    }
+   ],
    "source": [
     "from sys import path\n",
     "path.insert(0, '/home/azadoks/git/glosim2/')\n",
-    "path.insert(0, '/home/azadoks/git/structureREST/zocrys/lib/')\n",
+    "path.insert(0, '/home/azadoks/git/structureREST/lib/')\n",
     "from collections import OrderedDict\n",
     "from pymatgen import MPRester\n",
     "from libmatch.soap import get_Soaps\n",
@@ -18,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +66,9 @@
     "    structures = OrderedDict([(name, mpr.get_structure_by_material_id(id))\n",
     "                              for name, id in material_ids.iteritems()])\n",
     "\n",
-    "qps = OrderedDict([(name, zoap.structure2qp(structure,\n",
-    "                                            anonymize=True, scale=True,\n",
-    "                                            standardize=True, primitivize=True)\n",
+    "qps = OrderedDict([(name, zoap.structure2quippy(structure,\n",
+    "                                                anonymize=True, scale=True,\n",
+    "                                                standardize=False, primitivize=False)\n",
     "                   )\n",
     "                   for name, structure in structures.iteritems()])"
    ]
@@ -71,7 +82,7 @@
     "soaps = get_Soaps(qps.values(),\n",
     "                  nocenters=None, chem_channels=False,\n",
     "                  centerweight=1.0, gaussian_width=0.5,\n",
-    "                  cutoff=2.5, cutoff_transition_width=0.5,\n",
+    "                  cutoff=2.0, cutoff_transition_width=0.5,\n",
     "                  nmax=16, lmax=14,\n",
     "                  spkitMax=None, nprocess=8,\n",
     "                  chemicalProjection=None, dispbar=False,\n",
