New testing code

--- a/notebook/test/rest_test.ipynb
+++ b/notebook/test/rest_test.ipynb
@@ -42,6 +42,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "material_ids = {\n",
+    "    'diamond': 'mp-66',  # C\n",
+    "    'gaas': 'mp-2534',  # GaAs\n",
+    "    'rocksalt': 'mp-22862',  # NaCl\n",
+    "    'cubic_perovskite': 'mp-2998',  # BaTiO3\n",
+    "    'tetragonal_perovskite': 'mp-5986',  # BaTiO3\n",
+    "    'trigonal_perovskite': 'mp-5020',  # BaTiO3\n",
+    "    'orthorhombic_perovskite': 'mp-5777',  # BaTiO3\n",
+    "    'zincblende': 'mp-10695',  # ZnS\n",
+    "    'wurtzite': 'mp-10281',  # ZnS\n",
+    "    'fcc': 'mp-23',  # Ni\n",
+    "    'big_fcc': 'mp-76',  # Sr\n",
+    "    'bcc': 'mp-13',  # Fe\n",
+    "    'big_bcc': 'mp-70',  # Rb\n",
+    "    'hcp': 'mp-153',  # Mg\n",
+    "    'trigonal': 'mp-782',  # Te2Pd\n",
+    "    'tetragonal': 'mp-742',  # Ti2Cu\n",
+    "    'monoclinic': 'mp-684',  # BaS2\n",
+    "    'triclinic': 'mp-9122',  # CaP3\n",
+    "    'orthorhombic': 'mp-872')  # BaSn\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
