Fixed printing in soap_example

--- a/notebook/example/soap_example.ipynb
+++ b/notebook/example/soap_example.ipynb
@@ -68,7 +68,7 @@
     "])\n",
     "# Convert material_ids dict into a DataFrame with a column for name and material_id\n",
     "material_df = pd.DataFrame({'name': material_ids.keys(), 'material_id': material_ids.values()})\n",
-    "print 'Before applying mpr.get_structure_by_material_id'\n",
+    "if DISPLAY_DATA: print 'Before applying mpr.get_structure_by_material_id'\n",
     "if DISPLAY_DATA: display(material_df)\n",
     "\n",
     "# .apply will call its argument (in this case, mpr.get_structure_by_material_id) \n",
@@ -78,8 +78,8 @@
     "with MPRester('0WqdPfXxloze6T9N') as mpr:\n",
     "    material_df['structure'] = material_df['material_id'].apply(mpr.get_structure_by_material_id)\n",
     "\n",
-    "print ''.join(['=']*80)\n",
-    "print 'After applying the query function and making a new \"structure\" column'\n",
+    "if DISPLAY_DATA: print ''.join(['=']*80)\n",
+    "if DISPLAY_DATA: print 'After applying the query function and making a new \"structure\" column'\n",
     "if DISPLAY_DATA: display(material_df)"
    ]
   },
