Added distance matrix calculation to soap example notebook

--- a/notebook/example/soap_example.ipynb
+++ b/notebook/example/soap_example.ipynb
@@ -246,13 +246,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save only the necessary data\n",
-    "material_df[['material_id', 'pca_soap']].to_json()"
+    "material_df[['material_id', 'pca_soap']].to_json('pca_soap_df.json')\n",
+    "np.save(pca_soap, 'pca_soap')  # should save to pca_soap.npy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A numpy array is required to calculate the distance matrix\n",
+    "# The rows should represent structures, and the columns SOAP dimensions (or PCAed SOAP dimensions)\n",
+    "pca_soap = np.load('pca_soap.npy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculate Distance Matrix\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the distance matrix + write to disk using distance.f90 in structureREST/script/cluster/\n",
+    "\n",
+    "# Add the distance f2py folder to the path\n",
+    "sys.path.import(0, '../../script/cluster')\n",
+    "# Import the f2py average distance matrix function\n",
+    "from distance import average_distance_matrix\n",
+    "# File where distance matrix will be saved\n",
+    "filename = 'distances.dat'\n",
+    "# Remove file if it exists\n",
+    "if os.path.exists(filename):\n",
+    "    os.remove(filename)\n",
+    "# Write distance matrix directly to filename\n",
+    "average_distance_matrix(pca_soap, filename, \"({}(F8.6, ' '))\".format(len(soaps)))"
    ]
   }
  ],
