--- a/notebook/test/rest_test.ipynb
+++ b/notebook/test/rest_test.ipynb
@@ -2,6 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import OrderedDict\n",
+    "from pymatgen import MPRester\n",
+    "from pymatgen.io.ase import AseAtomsAdaptor\n",
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "material_ids = OrderedDict([\n",
+    "    ('diamond', 'mp-66'),  # C\n",
+    "    ('gaas', 'mp-2534'),  # GaAs\n",
+    "])\n",
+    "\n",
+    "with MPRester('0WqdPfXxloze6T9N') as mpr:\n",
+    "    structures = OrderedDict([(name, mpr.get_structure_by_material_id(id)) for name, id in material_ids.items()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "endpoint = \"fingerprints\"\n",
+    "function = \"matminer\"\n",
+    "payload = {\n",
+    "    'structures': json.dumps([s.as_dict() for s in structures.values()]),\n",
+    "    'preset': 'cn',\n",
+    "    'crystal_site_args': {},\n",
+    "    'site_stats_args': {}\n",
+    "}\n",
+    "\n",
+    "r = requests.get('http://127.0.0.1:9090/v1/{}/{}'.format(endpoint, function), params=payload)\n",
+    "print(r.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -372,14 +419,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
