Fixed distance calculation

--- a/notebook/test/zoap_test_db.ipynb
+++ b/notebook/test/zoap_test_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
     "import cStringIO\n",
     "import gzip\n",
     "import zoap\n",
-    "import quippy_utils\n",
+    "# import quippy_utils\n",
     "import pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,40 @@
     "soap_coll = db['soap']\n",
     "\n",
     "args_coll = db['args']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('collection', 'icsd')\n",
+      "('<=64', 148531)\n",
+      "('ordered', 87584)\n",
+      "('collection', 'mpds')\n",
+      "('<=64', 51072)\n",
+      "('ordered', 41974)\n",
+      "('collection', 'cod')\n",
+      "('<=64', 62113)\n",
+      "('ordered', 42205)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pymatgen import Structure\n",
+    "for name, coll in {'icsd': icsd_coll, 'cod': cod_coll, 'mpds': mpds_coll}.items():\n",
+    "    print('collection', name)\n",
+    "    print('<=64', coll.find({'n_sites': {'$lte': 64}}).count())\n",
+    "    count = 0\n",
+    "    for doc in coll.find({'n_sites': {'$lte': 64}}):\n",
+    "        structure = Structure.from_dict(doc['structure'])\n",
+    "        if structure.is_ordered:\n",
+    "            count +=1 \n",
+    "    print('ordered', count)"
    ]
   },
   {
